Remove color suggestions from index.html
Removed quick suggestions for color tags in Portuguese.

--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
       />
       <!-- preview de cor -->
       <div id="color-sample" class="color-sample hidden" aria-hidden="true"></div>
-      <!-- sugestões rápidas (em português, data-cor com o nome em português) -->
-      <div class="suggestions">Sugestões:
-        <span class="tag" data-cor="vermelho">vermelho</span>
-        <span class="tag" data-cor="azul">azul</span>
-        <span class="tag" data-cor="verde">verde</span>
-        <span class="tag" data-cor="roxo">roxo</span>
-      </div>
+      <!-- sugestões removidas -->
     </div>
 
     <div class="buttons">
